--- a/cfg/options.cfg
+++ b/cfg/options.cfg
@@ -6,9 +6,10 @@
         "temp_folder_path" : "tmp",
         "temp_file_name" : "temp",
         "bad_chars" : {"\"":"'", "<":"", ">":"", ":":"", "/":"", "\\":"", "|":"", "?":"", "*":""},
-        "video_formats" : {"1080p":"137+bestaudio/best", "720p":"136+bestaudio/best", "480p":"135+bestaudio/best", "360p":"134+bestaudio/best", "240p":"133+bestaudio/best"},
+        "video_formats" : {"default":"135+bestaudio/best", "1080p":"137+bestaudio/best", "720p":"136+bestaudio/best", "480p":"135+bestaudio/best", "360p":"134+bestaudio/best", "240p":"133+bestaudio/best"},
         "preferred_video_format" : "mp4",
-        "preferred_audio_codec" : "mp3"
+        "preferred_audio_codec" : "mp3",
+        "max_video_duration" : 1200
     },
     "telegram_bot":{
         "telegram_logger_name" : "telegram",
