ffmpeg path now can be modifed form the cfg file, and leaving it empty allows it to run with ffmpeg which downloaded from package manager on linux

--- a/cfg/options.cfg
+++ b/cfg/options.cfg
@@ -9,6 +9,7 @@
         "video_formats" : {"default":"135+bestaudio/best", "1080p":"137+bestaudio/best", "720p":"136+bestaudio/best", "480p":"135+bestaudio/best", "360p":"134+bestaudio/best", "240p":"133+bestaudio/best"},
         "preferred_video_format" : "mp4",
         "preferred_audio_codec" : "mp3",
+        "ffmpeg_location" : "",
         "max_video_duration" : 1200
     },
     "telegram_bot":{
