--- a/telegram_youtube_downloader/configs/config.yaml
+++ b/telegram_youtube_downloader/configs/config.yaml
@@ -1,15 +1,8 @@
+# For more configuration options 'docs/CONFIGURATIONS.md'
+
 logger_options:
   log_path: logs                                  # Can be abs path
   log_level: 20                                   # info
-
-youtube_downloader_options:
-  preferred_video_format: mp4
-  preferred_audio_codec: mp3
-  default_video_quality: 720p
-  max_video_duration_seconds: 1200                # 20 min
-  max_audio_duration_seconds: 3000                # 50 min
-  max_file_size: 45M                              # Telegram bots can send up to 50M
-  ffmpeg_location: null                           # null will try to get from env as ffmpeg
 
 telegram_bot_options:
   text_timeout_seconds: 30
@@ -18,3 +11,49 @@ telegram_bot_options:
 
 youtube_search_options:
   max_results: 5                                  # Limit search results with 5
+
+youtube_downloader_options:
+  max_video_duration_seconds: 1200                # 20 min
+  max_audio_duration_seconds: 3000                # 50 min
+  ffmpeg_location: null                           # 'null' will try to get from env as ffmpeg
+
+  audio_options:                                  # audio_options are directly passed to youtube_dl on audio downloads
+    postprocessors: 
+      - key: "FFmpegExtractAudio"
+        preferredcodec: "mp3"
+    format: "bestaudio/best"                      # format will be overridden by the default format on the formats section
+    noplaylist: true
+
+  video_options:                                  # video_options are directly passed to youtube_dl on video downloads
+    postprocessors: 
+      - key: "FFmpegVideoConvertor"
+        preferedformat: "mp4"
+    format: "bestvideo+bestaudio"                 # format will be overridden by the default format on the formats section
+    noplaylist: true
+
+  allowed_url_patterns:                           # Array of url regex for allowed paths, names will be used on '/sites' command
+    - name: All sites allowed
+      pattern: "^https://.*$"
+  formats:                                        # Download format options
+    VIDEO:
+      - name: best
+        value: "bestvideo+bestaudio/best"
+      - name: worst
+        value: "worstvideo+worstaudio/worst"
+      - name: 1080p
+        value: "137+bestaudio/best"
+      - name: 720p
+        value: "136+bestaudio/best"
+        is_default: true
+      - name: 480p
+        value: "135+bestaudio/best"
+      - name: 360p
+        value: "134+bestaudio/best"
+      - name: 240p
+        value: "133+bestaudio/best"
+    AUDIO:
+      - name: best
+        value: "bestaudio/best"
+        is_default: true
+      - name: worst
+        value: "worstaudio/worst"
