--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 python-telegram-bot==13.15
 requests
 PyYAML
-yt-dlp
+yt-dlp>=23.0.1
 
 # Optional (for search functionality)
 google-api-python-client
