--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,3 @@
-# telegram botkey
-my_bot_key.py
-key.txt
-
-# downloaded videos
-*.mp4
-*.mp3
-*.mkv
-
-# ffmpeg
-ffmpeg.exe
-ffplay.exe
-ffprobe.exe
-
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -151,3 +136,6 @@ dmypy.json
 
 # vscode
 .vscode
+
+# Temp (downloaded files)
+temp/
