--- a/.github/workflows/docker_latest.yaml
+++ b/.github/workflows/docker_latest.yaml
@@ -9,16 +9,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
-        run: docker build -t cccaaannn/telegram_youtube_downloader:latest .
-
-      - name: Push Docker image
-        run: docker push cccaaannn/telegram_youtube_downloader
+      - name: Build and push Docker
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/telegram_youtube_downloader:latest
