Add docker compose launch. Add possibility to use without cookies. Add option merge_output_format for yt-dlp config.

--- a/.gitignore
+++ b/.gitignore
@@ -139,6 +139,11 @@ dmypy.json
 
 # Temp (downloaded files)
 temp/
+downloads_temp/
 
 # Rolling logs
 *.log.*
+
+# Docker related
+docker/*
+docker-compose.override.yml
